[package]
name = "tincan"
version = "0.2.1"
edition = "2021"
authors = [ "SerRat44" ]
license = "MIT"
description = "A fine-grained reactive state management library for Rust."
readme = "README.md"
repository = "https://github.com/SerRat44/tincan"
homepage = "https://github.com/SerRat44/tincan"
documentation = "https://docs.rs/tincan"
keywords = [ "state", "signals", "store" ]
categories = [ "data-structures", "concurrency" ]
exclude = [ ".github/*", "RELEASE_NOTES.md", "release_notes.md" ]

[dependencies]

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]
